Acquia Ticket 15066-53834: Added height: on CSS to fix content wrapping around images on article listings
git-svn-id: https://svn-1.prod.hosting.acquia.com/opensource/trunk@1627 ba871ea3-d002-4683-b738-bf6965e0a2a8

--- a/local/sites/all/themes/sitetheme/css/views-styles.css
+++ b/local/sites/all/themes/sitetheme/css/views-styles.css
@@ -501,6 +501,7 @@ div#content-area > div.view-contributor-spotlight .user_badges img {
 .view-id-articles .views-field-field-lead-image-fid,
 .view-id-articles .views-field-field-image-imceimage-path {
   float: left;
+  height: 115px;
   margin-right: 15px;
 }
 
